Fixed max grid spacing setting in Draft

--- a/src/Mod/Draft/Resources/ui/userprefs-base.ui
+++ b/src/Mod/Draft/Resources/ui/userprefs-base.ui
@@ -694,6 +694,12 @@
           <property name="toolTip">
            <string>The spacing between each grid line</string>
           </property>
+          <property name="decimals">
+           <number>4</number>
+          </property>
+          <property name="maximum">
+           <double>9999.989999999999782</double>
+          </property>
           <property name="value">
            <double>1.000000000000000</double>
           </property>
