Added new icons for selection commands

--- a/src/Gui/Icons/resource.qrc
+++ b/src/Gui/Icons/resource.qrc
@@ -43,6 +43,7 @@
         <file>edit-delete.svg</file>
         <file>edit-paste.svg</file>
         <file>edit-select-all.svg</file>
+        <file>edit-select-box.svg</file>
         <file>edit-redo.svg</file>
         <file>edit-undo.svg</file>
         <file>edit-edit.svg</file>
