Added tank creator.

--- a/src/Mod/Ship/shipLoadExample/TaskPanel.ui
+++ b/src/Mod/Ship/shipLoadExample/TaskPanel.ui
@@ -76,7 +76,7 @@
           <widget class="QComboBox" name="Ship">
            <item>
             <property name="text">
-             <string>Serie 60 from Iowa University</string>
+             <string>Series 60 from Iowa University</string>
             </property>
            </item>
            <item>
@@ -86,7 +86,7 @@
            </item>
            <item>
             <property name="text">
-             <string>Serie 60 (Katamaran)</string>
+             <string>Series 60 (Katamaran)</string>
             </property>
            </item>
           </widget>
