--- a/src/Mod/Drawing/Gui/Resources/Drawing.qrc
+++ b/src/Mod/Drawing/Gui/Resources/Drawing.qrc
@@ -17,6 +17,7 @@
         <file>icons/actions/drawing-orthoviews.svg</file>
         <file>icons/actions/drawing-openbrowser.svg</file>
         <file>icons/actions/drawing-annotation.svg</file>
+        <file>icons/actions/drawing-clip.svg</file>
         <file>translations/Drawing_af.qm</file>
         <file>translations/Drawing_de.qm</file>
         <file>translations/Drawing_es.qm</file>
