Replace Gui text View->Display mode with View->Document window

--- a/src/Gui/TaskView/TaskAppearance.ui
+++ b/src/Gui/TaskView/TaskAppearance.ui
@@ -33,7 +33,7 @@
      <item>
       <widget class="QLabel" name="textLabel1" >
        <property name="text" >
-        <string>Display mode:</string>
+        <string>Document window:</string>
        </property>
       </widget>
      </item>
