Added roll angles options controller at GZ curves tool

--- a/src/Mod/Ship/tankGZ/TaskPanel.ui
+++ b/src/Mod/Ship/tankGZ/TaskPanel.ui
@@ -184,12 +184,21 @@
          <property name="maximum">
           <double>90.000000000000000</double>
          </property>
+         <property name="value">
+          <double>90.000000000000000</double>
+         </property>
         </widget>
        </item>
        <item row="2" column="1">
         <widget class="QSpinBox" name="NAngle">
+         <property name="minimum">
+          <number>2</number>
+         </property>
          <property name="maximum">
           <number>10000</number>
+         </property>
+         <property name="value">
+          <number>90</number>
          </property>
         </widget>
        </item>
