--- a/src/Mod/Part/Gui/TaskSweep.ui
+++ b/src/Mod/Part/Gui/TaskSweep.ui
@@ -14,17 +14,17 @@
    <string>Sweep</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0" colspan="3">
+   <item row="1" column="0" colspan="3">
     <widget class="Gui::ActionSelector" name="selector"/>
    </item>
-   <item row="1" column="0">
+   <item row="2" column="0">
     <widget class="QCheckBox" name="checkSolid">
      <property name="text">
       <string>Create solid</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="2">
+   <item row="2" column="2">
     <spacer name="horizontalSpacer">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -37,10 +37,18 @@
      </property>
     </spacer>
    </item>
-   <item row="1" column="1">
+   <item row="2" column="1">
     <widget class="QCheckBox" name="checkFrenet">
      <property name="text">
       <string>Frenet</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0" colspan="2">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Select one or more profiles and select an edge or wire
+in the 3D view for the sweep path.</string>
      </property>
     </widget>
    </item>
