--- a/src/Mod/Ship/simRun/TaskPanel.ui
+++ b/src/Mod/Ship/simRun/TaskPanel.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>292</width>
-    <height>72</height>
+    <width>300</width>
+    <height>102</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,7 +19,13 @@
   <property name="minimumSize">
    <size>
     <width>0</width>
-    <height>72</height>
+    <height>100</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>300</width>
+    <height>16777215</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -107,6 +113,16 @@
       </property>
      </item>
     </widget>
+   </item>
+   <item row="2" column="0">
+    <widget class="QLabel" name="DeviceLabel">
+     <property name="text">
+      <string>OpenCL device</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="1" colspan="2">
+    <widget class="QComboBox" name="Device"/>
    </item>
   </layout>
  </widget>
