Enhancements to OpenSCAD module
interpolate OpenSCAD surface elements (heightmaps) to BSplineSurface
ignore render statement #21
handle difference object with only one child #46
fix sign of import origin in prototype
fixed syntax of minkowski statement
Added Icon for AddOpenSCADElement #50 and fixed typo in OpenSCAD module
ignore OpenSCAD Modifiers #31
handle fuse with a single child
remove redefinition of python list
make OpenSCAD importCSG avavailable in command line mode
add modifier characters to the label of the top affected object
started translation
remove ColorCodeShapes command from toolbar and menu
Added toolbar with Part tools to OpenSCAD WB
remove OpenSCAD prototype importer from build

--- a/src/Mod/OpenSCAD/Resources/OpenSCAD.qrc
+++ b/src/Mod/OpenSCAD/Resources/OpenSCAD.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource> 
         <file>icons/preferences-openscad.svg</file>
+        <file>icons/OpenSCAD_AddOpenSCADElement.svg</file>
         <file>icons/OpenSCAD_ColorCodeShape.svg</file>
         <file>icons/OpenSCAD_RefineShapeFeature.svg</file>
         <file>icons/OpenSCAD_ReplaceObject.svg</file>
