--- a/src/Gui/DlgSettingsViewColor.ui
+++ b/src/Gui/DlgSettingsViewColor.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>601</width>
-    <height>407</height>
+    <height>445</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -369,7 +369,7 @@
         <property name="spacing">
          <number>6</number>
         </property>
-        <item row="0" column="0">
+        <item row="1" column="0">
          <widget class="QLabel" name="label">
           <property name="minimumSize">
            <size>
@@ -382,28 +382,28 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="0">
+        <item row="2" column="0">
          <widget class="QLabel" name="label_2">
           <property name="text">
            <string>Edited vertex color</string>
           </property>
          </widget>
         </item>
-        <item row="2" column="0">
+        <item row="3" column="0">
          <widget class="QLabel" name="label_3">
           <property name="text">
            <string>Construction geometry</string>
           </property>
          </widget>
         </item>
-        <item row="3" column="0">
+        <item row="4" column="0">
          <widget class="QLabel" name="label_4">
           <property name="text">
            <string>Fully constrained geometry</string>
           </property>
          </widget>
         </item>
-        <item row="2" column="1">
+        <item row="3" column="1">
          <widget class="Gui::PrefColorButton" name="ConstructionColor">
           <property name="toolTip">
            <string>The color of construction geometry in edit mode</string>
@@ -423,7 +423,7 @@
           </property>
          </widget>
         </item>
-        <item row="3" column="1">
+        <item row="4" column="1">
          <widget class="Gui::PrefColorButton" name="FullyConstrainedColor">
           <property name="toolTip">
            <string>The color of fully constrained geometry in edit mode</string>
@@ -443,7 +443,7 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
+        <item row="2" column="1">
          <widget class="Gui::PrefColorButton" name="EditedVertexColor">
           <property name="toolTip">
            <string>The color of vertices being edited</string>
@@ -463,7 +463,7 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="1">
+        <item row="1" column="1">
          <widget class="Gui::PrefColorButton" name="EditedEdgeColor">
           <property name="toolTip">
            <string>The color of edges being edited</string>
@@ -477,6 +477,30 @@
           </property>
           <property name="prefEntry" stdset="0">
            <cstring>EditedEdgeColor</cstring>
+          </property>
+          <property name="prefPath" stdset="0">
+           <cstring>View</cstring>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_5">
+          <property name="text">
+           <string>Cursor text color</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="Gui::PrefColorButton" name="CursorTextColor">
+          <property name="color">
+           <color>
+            <red>0</red>
+            <green>0</green>
+            <blue>255</blue>
+           </color>
+          </property>
+          <property name="prefEntry" stdset="0">
+           <cstring>CursorTextColor</cstring>
           </property>
           <property name="prefPath" stdset="0">
            <cstring>View</cstring>
@@ -530,6 +554,11 @@
   <tabstop>checkBoxSelection</tabstop>
   <tabstop>HighlightColor</tabstop>
   <tabstop>SelectionColor</tabstop>
+  <tabstop>CursorTextColor</tabstop>
+  <tabstop>EditedEdgeColor</tabstop>
+  <tabstop>EditedVertexColor</tabstop>
+  <tabstop>ConstructionColor</tabstop>
+  <tabstop>FullyConstrainedColor</tabstop>
   <tabstop>radioButtonSimple</tabstop>
   <tabstop>radioButtonGradient</tabstop>
   <tabstop>checkMidColor</tabstop>
