--- a/src/Mod/Draft/Resources/ui/userprefs-base.ui
+++ b/src/Mod/Draft/Resources/ui/userprefs-base.ui
@@ -29,9 +29,28 @@
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_19">
         <item>
+         <widget class="Gui::PrefCheckBox" name="gui::prefcheckbox_12">
+          <property name="toolTip">
+           <string>If this is checked, the Draft workbench won't appear. Useful since all of the Draft tools are also in the Arch workbench.</string>
+          </property>
+          <property name="text">
+           <string>Hide Draft workbench</string>
+          </property>
+          <property name="prefEntry" stdset="0">
+           <cstring>hideDraftWorkbench</cstring>
+          </property>
+          <property name="prefPath" stdset="0">
+           <cstring>Mod/Draft</cstring>
+          </property>
+         </widget>
+        </item>
+        <item>
          <widget class="QLabel" name="label_19">
           <property name="text">
            <string>Draft interface mode</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
           </property>
          </widget>
         </item>
