0000818: [PATCH] added new page to Customize dialog for space navigator

--- a/src/Gui/Icons/resource.qrc
+++ b/src/Gui/Icons/resource.qrc
@@ -78,5 +78,11 @@
         <file>Tree_Dimension.svg</file>
         <file>Tree_Python.svg</file>
         <file>spaceball_button.svg</file>
+        <file>SpNav-PanLR.png</file>
+        <file>SpNav-PanUD.png</file>
+        <file>SpNav-Roll.png</file>
+        <file>SpNav-Spin.png</file>
+        <file>SpNav-Tilt.png</file>
+        <file>SpNav-Zoom.png</file>
     </qresource>
 </RCC>
