--- a/src/Mod/PartDesign/Gui/Resources/PartDesign.qrc
+++ b/src/Mod/PartDesign/Gui/Resources/PartDesign.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource> 
+        <file>icons/PartDesign_Chamfer.svg</file>
         <file>icons/PartDesign_Fillet.svg</file>
         <file>icons/PartDesign_Groove.svg</file>
         <file>icons/PartDesign_Pad.svg</file>
