Updated windows installer stuff

--- a/src/WindowsInstaller/FreeCAD.wxs
+++ b/src/WindowsInstaller/FreeCAD.wxs
@@ -183,6 +183,7 @@
             <ComponentRef Id="CompExampleData" />
             <!-- Plot module -->
             <ComponentRef Id="CompModPlot" />
+            <ComponentRef Id="CompModPlotResources" />
             <ComponentRef Id="CompModPlotIcons" />
             <ComponentRef Id="CompModPlotTranslations" />
             <ComponentRef Id="CompModplotAxes" />
